--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -16,9 +16,13 @@ const { noMarginTop = false } = Astro.props;
   <div class="footer-wrapper">
     <Socials centered />
     <div class="copyright-wrapper">
-      <span>Copyright &#169; {currentYear}</span>
+      <span>© 2021-2024 s0rry</span>
+    </div>
+    <div class="copyright-wrapper">
+      <!-- <span>Copyright &#169; {currentYear}</span>
       <span class="separator">&nbsp;|&nbsp;</span>
-      <span>All rights reserved.</span>
+      <span>All rights reserved.</span> -->
+      <span>蜀ICP备2022002797号-1</span>
     </div>
   </div>
 </footer>
