--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -22,7 +22,9 @@ const { noMarginTop = false } = Astro.props;
       <!-- <span>Copyright &#169; {currentYear}</span>
       <span class="separator">&nbsp;|&nbsp;</span>
       <span>All rights reserved.</span> -->
-      <span>蜀ICP备2022002797号-1</span>
+      <a href="https://beian.miit.gov.cn/" target="_blank">
+        <span>蜀ICP备2022002797号-1</span>
+      </a>
     </div>
   </div>
 </footer>
