--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,6 +10,7 @@ export interface Props {
 const { activeNav } = Astro.props;
 ---
 
+<!-- src={`/assets/${LOGO_IMAGE.svg ? "logo.svg" : "logo.png"}`} -->
 <header>
   <a id="skip-to-content" href="#main-content">Skip to content</a>
   <div class="nav-container">
@@ -18,7 +19,7 @@ const { activeNav } = Astro.props;
         {
           LOGO_IMAGE.enable ? (
             <img
-              src={`/assets/${LOGO_IMAGE.svg ? "logo.svg" : "logo.png"}`}
+              src={"https://www.nssctf.cn/files/2024/2/20/61bc635593.jpeg"}
               alt={SITE.title}
               width={LOGO_IMAGE.width}
               height={LOGO_IMAGE.height}
