--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -13,7 +13,8 @@
     --color-border: 236, 233, 233;
   }
   html[data-theme="dark"] {
-    --color-fill: 33, 39, 55;
+    /* --color-fill: 33, 39, 55; */
+    --color-fill: 31, 31, 31;
     --color-text-base: 234, 237, 243;
     --color-accent: 255, 107, 1;
     --color-card: 52, 63, 96;
