可以直接同步语雀文章，解决跨域问题

--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -45,7 +45,7 @@ const layoutProps = {
   scrollSmooth: true,
 };
 ---
-
+<meta name="referrer" content="never">
 <Layout {...layoutProps}>
   <Header />
 
